[package]
name = "miscompilation-repro"
version = "0.1.0"
authors = ["Matt Ickstadt <mattico8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
panic-halt = "0.2.0"
cfg-if = "0.1.10"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
cortex-m-log = { version = "~0.6", features = ["itm", "semihosting", "log-integration"] }
panic-itm = { version = "~0.4.1" }
panic-semihosting = { version = "0.5.3" }
cortex-m-semihosting = { version = "0.3.5" }

[dependencies.stm32h7xx-hal]
features = ["stm32h743v", "rt", "sdmmc", "rtc"]
path = "stm32h7xx-hal"

[features]
default = ["log-rtt"]
log-rtt = []